--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -1,6 +1,8 @@
 .nav-container {
   width: 100wh;
   background-color: rgb(6, 6, 5);
+  display: flex;
+  align-items: center;
 }
 
 .nav-logo {
@@ -8,4 +10,17 @@
   margin-top: 20px;
   margin-left: 20px;
   margin-right: 20px;
+}
+.search {
+  display: flex;
+  flex: 1;
+}
+.nav-searchInput {
+  width: 100%;
+  border: none;
+  height: 22px;
+}
+.nav-searchIcon {
+  background-color: rgb(216, 146, 14);
+  height: 24px !important;
 }
