--- a/src/screens/Home/home.css
+++ b/src/screens/Home/home.css
@@ -1,13 +1,4 @@
-.home-container {
-  background: url("../../../public/image/bg-home.png") center center/cover
-    no-repeat;
-  height: 100vh;
+.home-banner-img {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  /* justify-content: center; */
-  /* align-items: center; */
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
-  object-fit: contain;
-  color: aliceblue;
+  mask-image: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0.3));
 }
