--- a/src/components/HamburgerMenu/hamburgerMenu.css
+++ b/src/components/HamburgerMenu/hamburgerMenu.css
@@ -1,4 +1,4 @@
-.humburger {
+.hamburger {
   background-color: black;
   /* height:÷ 80px; */
   display: flex;
@@ -6,7 +6,7 @@
   align-items: center;
 }
 
-.humburger-menu {
+.hamburger-menu {
   margin-left: 2rem;
   font-size: 2rem;
   background: none;
@@ -60,7 +60,7 @@
   width: 100%;
 }
 
-.humburger-toggle {
+.hamburger-toggle {
   background-color: rgb(155, 199, 219);
   width: 100%;
   height: 80px;
