--- a/src/components/HamburgerMenu/hamburgerMenu.css
+++ b/src/components/HamburgerMenu/hamburgerMenu.css
@@ -14,7 +14,8 @@
 }
 
 .nav-menu {
-  background-color: rgba(155, 199, 219, 0.95);
+  background-color: rgba(24, 25, 25, 0.95);
+  /* background-color: rgba(155, 199, 219, 0.95); */
   width: 250px;
   height: 100vh;
   display: flex;
@@ -23,7 +24,11 @@
   top: 0;
   left: -100%;
   transition: 850ms;
-  background: linear-gradient(rgba(155, 199, 219), rgba(255, 228, 196, 0.8));
+  background: linear-gradient(
+    rgb(6, 6, 6),
+    rgba(147, 194, 220),
+    rgba(255, 228, 196, 0.8)
+  );
 }
 
 .nav-menu.active {
@@ -43,13 +48,14 @@
 .nav-text a {
   text-decoration: none;
   color: black;
-  font-size: 16px;
+  font-size: 18px;
   width: 95%;
   height: 100%;
   display: flex;
   align-items: center;
   padding: 0 16px;
   border-radius: 4px;
+  color: white;
 }
 
 .nav-text a:hover {
@@ -63,7 +69,6 @@
 }
 
 .hamburger-toggle {
-  background-color: rgb(155, 199, 219);
   width: 100%;
   height: 80px;
   display: flex;
