--- a/src/components/HamburgerMenu/hamburgerMenu.css
+++ b/src/components/HamburgerMenu/hamburgerMenu.css
@@ -13,7 +13,11 @@
 }
 
 .nav-menu {
-  background-color: rgba(155, 199, 219, 0.95);
+  background: linear-gradient(
+    rgb(6, 6, 6),
+    rgba(147, 194, 220),
+    rgba(255, 228, 196, 0.8)
+  );
   width: 250px;
   height: 100vh;
   display: flex;
@@ -41,7 +45,7 @@
 .nav-text a {
   text-decoration: none;
   color: black;
-  font-size: 16px;
+  font-size: 18px;
   width: 95%;
   height: 100%;
   display: flex;
@@ -61,7 +65,6 @@
 }
 
 .hamburger-toggle {
-  background-color: rgb(155, 199, 219);
   width: 100%;
   height: 80px;
   display: flex;
