--- a/src/components/HamburgerMenu/hamburgerMenu.css
+++ b/src/components/HamburgerMenu/hamburgerMenu.css
@@ -8,7 +8,8 @@
 
 .hamburger-menu {
   margin-left: 2rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
+  font-weight: bold;
   background: none;
 }
 
@@ -26,6 +27,11 @@
   top: 0;
   left: -100%;
   transition: 850ms;
+  background: linear-gradient(
+    rgb(6, 6, 6),
+    rgb(124, 193, 188),
+    rgba(255, 228, 196, 0.6)
+  );
 }
 
 .nav-menu.active {
@@ -57,6 +63,8 @@
 
 .nav-text a:hover {
   background-color: rgba(255, 228, 196, 0.758);
+  color: black;
+  font-weight: bold;
   transform: scale(0.9);
   transition: 0.3s all ease;
 }
