--- a/src/components/Category/categories.css
+++ b/src/components/Category/categories.css
@@ -2,8 +2,8 @@
   align-items: center;
 }
 
-.category-link a {
+/* .category-link a {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-}
+} */
