--- a/src/components/Category/categories.css
+++ b/src/components/Category/categories.css
@@ -75,3 +75,15 @@
   height: calc(var(--n) * var(--s) + (var(--n) - 1) * var(--g));
   grid-template-columns: repeat(var(--m), auto);
 }
+.product > button {
+  background-color: rgb(102, 207, 207);
+  border: none;
+  padding: 5px;
+  font-weight: bold;
+}
+
+button:hover {
+  cursor: pointer;
+  transform: scale(0.9);
+  transition: 0.3s all ease;
+}
