--- a/src/components/Product/product.css
+++ b/src/components/Product/product.css
@@ -4,23 +4,31 @@
   align-items: center;
   justify-content: flex-end;
   max-height: 400px;
-  min-width: 100px;
-  margin: 15px;
+  min-width: 220px;
   padding: 15px;
   width: 100%;
   background-color: white;
   z-index: 1;
+  border-radius: 20px 20px 20px 20px;
 }
+
 .product-description {
   height: 100px;
   margin-bottom: 15px;
   text-align: justify;
+  margin-bottom: 20px;
 }
-
+.product-category-text {
+  margin-bottom: 10px;
+}
 .product-title {
   padding-top: 15px;
+  padding-bottom: 10px;
   font-weight: bold;
   font-size: 18px;
+}
+.product-description-text {
+  font-size: 14px;
 }
 .product-price {
   margin-top: 5px;
@@ -49,4 +57,22 @@ button:hover {
   cursor: pointer;
   transform: scale(0.9);
   transition: 0.3s all ease;
+}
+
+.products-list-main {
+  z-index: 1;
+}
+
+.products-list-main {
+  padding: 30px;
+  --n: 3; /* number of rows*/
+  --m: 3; /* number of columns */
+  --g: 20px; /* control the gap */
+  --f: 1.5; /* control the scale factor */
+
+  display: grid;
+  gap: var(--g);
+  width: calc(var(--m) * var(--s) + (var(--m) - 1) * var(--g));
+  height: calc(var(--n) * var(--s) + (var(--n) - 1) * var(--g));
+  grid-template-columns: repeat(var(--m), auto);
 }
