--- a/src/components/Category/categories.css
+++ b/src/components/Category/categories.css
@@ -79,9 +79,10 @@
   grid-template-columns: repeat(var(--m), auto);
 }
 .product > button {
-  background-color: rgb(102, 207, 207);
-  border: none;
-  padding: 5px;
+  background-color: rgb(149 202 218 / 73%);
+  border: 2px solid rgba(102, 99, 99, 0.191);
+  padding: 5px 14px;
+  border-radius: 8px;
   font-weight: bold;
 }
 
@@ -89,4 +90,6 @@ button:hover {
   cursor: pointer;
   transform: scale(0.9);
   transition: 0.3s all ease;
+  background-color: rgba(23, 55, 64, 0.951);
+  color: white;
 }
