--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -37,8 +37,8 @@
 }
 
 .cart-count {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 5px;
+  margin-right: 20px;
 }
 
 .nav-logo {
@@ -61,7 +61,7 @@
   margin-bottom: 0 !important;
 }
 .nav-searchIcon {
-  background-color: rgb(91 220 212);
+  background-color: rgb(149, 202, 218);
   border: none !important;
   height: 25px !important;
 }
