--- a/src/screens/Cart/cart.css
+++ b/src/screens/Cart/cart.css
@@ -1,7 +1,48 @@
 .cart-img {
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  z-index: -1;
 }
+.card-banner-img {
+  width: 100%;
+  mask-image: linear-gradient(to bottom, rgb(0, 0, 0, 1), rgba(0, 0, 0, 0));
+  z-index: -1;
+  margin-bottom: -100px;
+}
+
+.checkoutProduct {
+  display: flex;
+}
+.pc-image {
+  object-fit: contain;
+  width: 250px;
+  height: 250px;
+}
+
+.cp-info {
+  padding-left: 20px;
+}
+.cp-title {
+  font-size: 18px;
+  font-weight: 800;
+}
+
+.cp-btn {
+  background-color: rgb(149 202 218 / 73%);
+  border: 2px solid rgba(102, 99, 99, 0.191);
+  padding: 5px 10px;
+  border-radius: 8px;
+  font-weight: bold;
+}
+
+.cp-btn:hover {
+  cursor: pointer;
+  transform: scale(0.9);
+  transition: 0.3s all ease;
+  background-color: rgba(23, 55, 64, 0.951);
+  color: white;
+}
+/* 
 
 .product {
   display: flex;
@@ -29,7 +70,7 @@
   margin-bottom: 10px;
 }
 .product-title {
-  padding-top: 15px;
+  padding-top: 25px;
   padding-bottom: 10px;
   font-weight: bold;
   font-size: 18px;
@@ -54,8 +95,8 @@
 }
 
 .product > button {
-  background-color: rgb(102, 207, 207);
-  border: none;
+  background-color: rgb(149 202 218 / 73%);
+  border: 2px solid rgba(102, 99, 99, 0.191);
   padding: 5px 14px;
   border-radius: 8px;
   font-weight: bold;
@@ -66,9 +107,9 @@ button:hover {
   transform: scale(0.9);
   transition: 0.3s all ease;
 }
-
-.products-list-main {
-  z-index: 1;
+.btn-add:hover {
+  background-color: rgba(23, 55, 64, 0.951);
+  color: white;
 }
 
 .products-list-main {
@@ -77,4 +118,8 @@ button:hover {
   justify-content: space-evenly;
   width: 100%;
   flex-wrap: wrap;
+  z-index: 1;
+  max-width: 1500px;
 }
+
+ */
