--- a/src/screens/Cart/cart.css
+++ b/src/screens/Cart/cart.css
@@ -9,6 +9,18 @@
   z-index: -1;
   margin-bottom: -100px;
 }
+.cart-container {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.cart-info-title {
+  display: flex;
+  justify-content: center;
+  margin-top: 70px;
+  margin-bottom: 20px;
+  font-size: 35px;
+  font-weight: 900;
+}
 
 .checkoutProduct {
   display: flex;
@@ -21,6 +33,7 @@
 
 .cp-info {
   padding-left: 20px;
+  padding-top: 60px;
 }
 .cp-title {
   font-size: 18px;
@@ -42,84 +55,3 @@
   background-color: rgba(23, 55, 64, 0.951);
   color: white;
 }
-/* 
-
-.product {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  max-height: 400px;
-  min-width: 220px;
-  padding: 15px;
-  width: 300px;
-  background-color: white;
-  z-index: 1;
-  border-radius: 20px 20px 20px 20px;
-  margin-bottom: 30px;
-}
-
-.product-description {
-  height: 100px;
-  margin-bottom: 15px;
-  text-align: justify;
-  margin-bottom: 20px;
-  float: left !important;
-}
-.product-category-text {
-  margin-bottom: 10px;
-}
-.product-title {
-  padding-top: 25px;
-  padding-bottom: 10px;
-  font-weight: bold;
-  font-size: 18px;
-}
-.product-description-text {
-  font-size: 14px;
-}
-.product-price {
-  margin-top: 5px;
-}
-.product-rating {
-  display: flex;
-  flex-direction: row;
-}
-
-.product > img {
-  width: 100%;
-  max-height: 200px;
-  object-fit: contain;
-  margin-top: 25px;
-  margin-bottom: 20px;
-}
-
-.product > button {
-  background-color: rgb(149 202 218 / 73%);
-  border: 2px solid rgba(102, 99, 99, 0.191);
-  padding: 5px 14px;
-  border-radius: 8px;
-  font-weight: bold;
-}
-
-button:hover {
-  cursor: pointer;
-  transform: scale(0.9);
-  transition: 0.3s all ease;
-}
-.btn-add:hover {
-  background-color: rgba(23, 55, 64, 0.951);
-  color: white;
-}
-
-.products-list-main {
-  padding: 30px;
-  display: flex;
-  justify-content: space-evenly;
-  width: 100%;
-  flex-wrap: wrap;
-  z-index: 1;
-  max-width: 1500px;
-}
-
- */
