--- a/src/screens/Signout/signout.css
+++ b/src/screens/Signout/signout.css
@@ -11,3 +11,11 @@
     margin-bottom: 20px;
   }
   
+
+#logOut {
+  background-color: #fb9900;
+  border-radius: 2px;
+  padding: 5px;
+  border-radius: 10px;
+  border: none;
+}
