--- a/src/screens/Cart/cart.css
+++ b/src/screens/Cart/cart.css
@@ -26,7 +26,7 @@
   display: flex;
   margin: 30px;
   border: 1px solid gray;
-  background-color: #e6d1b7; /* border-radius: 19px; */
+  background-color: #e6d1b791; /* border-radius: 19px; */
   padding: 25px;
 }
 .pc-image {
