adding images and fixing css

--- a/src/screens/Order/order.css
+++ b/src/screens/Order/order.css
@@ -1,5 +1,5 @@
 .order-container {
-    background-color: blue;
+    background-color: white;
     max-width: 1500px;
     display: flex;
     margin: 60px auto;
