--- a/src/components/Product/product.css
+++ b/src/components/Product/product.css
@@ -74,3 +74,12 @@ button:hover {
   z-index: 1;
   max-width: 1500px;
 }
+
+.double-size-card {
+  width: 800px;
+  height: 600px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
