--- a/src/components/HamburgerMenu/hamburgerMenu.css
+++ b/src/components/HamburgerMenu/hamburgerMenu.css
@@ -14,7 +14,6 @@
 }
 
 .nav-menu {
-
   background: linear-gradient(
     rgb(6, 6, 6),
     rgba(147, 194, 220),
@@ -31,7 +30,7 @@
   transition: 850ms;
   background: linear-gradient(
     rgb(6, 6, 6),
-    rgb(124, 193, 188),
+    rgb(138 227 249),
     rgba(255, 228, 196, 0.6)
   );
 }
@@ -62,14 +61,13 @@
   color: white;
 
   font-weight: bold;
-
 }
 
 .nav-text a:hover {
   background-color: rgba(255, 228, 196, 0.758);
   color: black;
   font-weight: bold;
-  transform: scale(0.9);
+  transform: scale(1.1);
   transition: 0.3s all ease;
 }
 
