--- a/src/screens/Cart/cart.css
+++ b/src/screens/Cart/cart.css
@@ -27,7 +27,8 @@
   margin: 30px;
   border: 1px solid gray;
   background-color: white; /* border-radius: 19px; */
-  padding: 25px;
+  padding: 15px;
+  height: max-content;
 }
 .pc-image {
   object-fit: contain;
@@ -54,8 +55,19 @@
 
 .cp-btn:hover {
   cursor: pointer;
-  transform: scale(0.9);
+  transform: scale(1.1);
   transition: 0.3s all ease;
   background-color: rgba(23, 55, 64, 0.951);
   color: white;
+}
+
+.order-subtotal {
+  display: flex;
+  align-items: flex-end;
+  margin-left: 20px;
+  margin-bottom: -35px;
+}
+
+.cp-qty {
+  padding-bottom: 20px;
 }
