--- a/src/screens/Signout/signout.css
+++ b/src/screens/Signout/signout.css
@@ -9,12 +9,13 @@
   border-radius: 5px;
   text-align: center;
   margin-bottom: 20px;
-  min-height: 400px;
+  min-height: 200px;
 }
 
 #logOut {
   background-color: #fb9900;
   border-radius: 2px;
+  margin-top: 30px;
   padding: 5px;
   border-radius: 10px;
   border: none;
