--- a/src/screens/Signout/signout.css
+++ b/src/screens/Signout/signout.css
@@ -1,16 +1,16 @@
 .logOutBox {
-    width: 400px;
-    margin-top: 20px;
-    margin: 40px auto;
-    padding: 20px;
-    background-color: rgba(21, 38, 49);
-    color: white;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
+  width: 400px;
+  margin-top: 20px;
+  margin: 40px auto;
+  padding: 20px;
+  background-color: rgba(21, 38, 49);
+  color: white;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-align: center;
+  margin-bottom: 20px;
+  min-height: 400px;
+}
 
 #logOut {
   background-color: #fb9900;
