--- a/src/screens/Cart/cart.css
+++ b/src/screens/Cart/cart.css
@@ -21,6 +21,12 @@
   font-size: 35px;
   font-weight: 900;
 }
+@media screen and (max-width: 560px) {
+  .cart-info-title {
+    margin-top: 90px;
+    font-size: 20px;
+  }
+}
 
 .checkoutProduct {
   display: flex;
@@ -30,6 +36,21 @@
   padding: 15px;
   height: max-content;
 }
+
+@media screen and (max-width: 560px) {
+  .checkoutProduct {
+    display: grid;
+    padding: 15px;
+    margin: 30px;
+  }
+  .cp-info {
+    padding-top: 0;
+  }
+  .order-subtotal {
+    font-size: 14px;
+  }
+}
+
 .pc-image {
   object-fit: contain;
   width: 250px;
