--- a/src/screens/Signin/signin.css
+++ b/src/screens/Signin/signin.css
@@ -14,6 +14,12 @@
   margin-bottom: 20px;
 }
 
+@media screen and (max-width: 560px) {
+  .form {
+    max-width: 360px;
+  }
+}
+
 label {
   display: block;
   margin-bottom: 10px;
@@ -43,17 +49,16 @@ input[type="submit"]:hover {
   background-color: #0a0b0a;
 }
 
-
 #submitCredentials {
   background-color: rgb(149 202 218 / 73%);
-    border: 2px solid rgba(102, 99, 99, 0.191);
-    padding: 7px 36px;
-    border-radius: 8px;
-    font-size: 16px;
-    margin-top: 17px;
-    margin-bottom: 10px;
-    font-weight: bold;
-    color: white;
+  border: 2px solid rgba(102, 99, 99, 0.191);
+  padding: 7px 36px;
+  border-radius: 8px;
+  font-size: 16px;
+  margin-top: 17px;
+  margin-bottom: 10px;
+  font-weight: bold;
+  color: white;
 }
 #submitCredentials:hover {
   background-color: rgba(71, 107, 117);
